refactor function and update requests

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 .Rhistory
 .RData
 .Ruserdata
+
+
+/Wohnlagenkarte_2019/Wohnlagenkarte_2019.geojson
+/Wohnlagenkarte_2019/Wohnlagenkarte_2019.sqlite
